Fix dropdown on mobile nav

--- a/rails/app/assets/stylesheets/admin/_navigation.scss
+++ b/rails/app/assets/stylesheets/admin/_navigation.scss
@@ -47,6 +47,11 @@
       &:hover a {
         color: $white;
       }
+
+      @include for-phone-only {
+        order: -1;
+        margin-top: 1rem;
+      }
     }
   }
 
@@ -79,6 +84,10 @@
     display: none;
     width: 100%;
     z-index: 1;
+
+    @include for-phone-only {
+      position: relative;
+    }
   }
 
   ul li:hover > ul,
